--- a/src/scss/base/_globales.scss
+++ b/src/scss/base/_globales.scss
@@ -16,7 +16,7 @@ html {
 body {
     min-width: 32rem;
     font: v.$paragraph;
-    background-color: darken(v.$grisClaro, 3%);
+    background-color: #e8e8e8;
 
     @media (min-width: 768px) {
         font: v.$paragraph-tablet;
